<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<licenses>
		<license>
			<name>MPL 2.0</name>
			<url>https://www.mozilla.org/en-US/MPL/2.0/</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git://github.com/mosip/registration.git</connection>
		<developerConnection>scm:git:ssh://github.com:mosip/registration.git</developerConnection>
		<url>https://github.com/mosip/registration</url>
		<tag>HEAD</tag>
	</scm>
	<developers>
		<developer>
			<name>Mosip</name>
			<email>mosip.emailnotifier@gmail.com</email>
			<organization>io.mosip</organization>
			<organizationUrl>https://github.com/mosip/registration</organizationUrl>
		</developer>
	</developers>
	<groupId>io.mosip.registrationprocessor</groupId>
	<artifactId>registrationprocessor-ref-impl-parent</artifactId>
	<version>1.2.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>registration-processor ref impl components</name>
	<description>Parent project of MOSIP Registration processor Referernce Implementation components</description>

	<properties>
		<doclint>none</doclint>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.version>3.8.0</maven.compiler.version>
		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
		<maven.jacoco.version>0.8.5</maven.jacoco.version>
		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
		<maven.javadoc.version>3.2.0</maven.javadoc.version>
		<maven.assembly.version>3.3.0</maven.assembly.version>

		<!-- Core -->
		<spring-framework.version>5.0.6.RELEASE</spring-framework.version>
		<spring.version>5.0.4.RELEASE</spring.version>
		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
		<spring.data.version>2.0.9.RELEASE</spring.data.version>
		<spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>

		<spring.batch.version>4.0.1.RELEASE</spring.batch.version>
		<spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>

		<!-- Miscellaneous -->
		<javax.el-api.version>3.0.0</javax.el-api.version>
		<javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
		<jackson.version>2.12.0</jackson.version>
		<jackson.afterburner.version>2.12.0</jackson.afterburner.version>
		<hibernate.validator.version>6.0.12.Final</hibernate.validator.version>
		<modelmapper.version>2.1.1</modelmapper.version>
		<jcl.to.slf4j.version>1.7.25</jcl.to.slf4j.version>
		<apache.httpcomponents.version>4.5.6</apache.httpcomponents.version>

		<!-- Swagger -->
		<swagger.version>2.9.2</swagger.version>

		<!-- Data Access -->
		<eclipselink.version>2.5.0</eclipselink.version>
		<mysql.connector.version>5.1.46</mysql.connector.version>
		<h2.version>1.4.195</h2.version>
		<postgresql.version>42.2.2</postgresql.version>

		<!-- Lombok -->
		<lombok.version>1.18.8</lombok.version>

		<!-- For Cache -->
		<ignite.version>2.3.0</ignite.version>

		<!--For Security -->
		<bouncycastle.version>1.60</bouncycastle.version>
		<commons.pool>1.6</commons.pool>

		<!-- Support tools & utilities -->
		<commons-math3>3.6.1</commons-math3>
		<commons-lang3>3.7</commons-lang3>
		<commons-io>2.6</commons-io>
		<commons-codec>1.10</commons-codec>
		<commons.beanutils.version>1.9.2</commons.beanutils.version>
		<commons.configuration2.version>2.2</commons.configuration2.version>
		<commons.io.version>2.6</commons.io.version>
		<velocity.version>1.7</velocity.version>
		<velocity.tools.version>2.0</velocity.tools.version>

		<!-- Test & Logging -->
		<junit.version>4.12</junit.version>
		<logback.version>1.2.3</logback.version>
		<slf4j.version>1.7.19</slf4j.version>
		<mockito.version>3.4.4</mockito.version>
		<powermock.module.junit4.version>2.0.7</powermock.module.junit4.version>
		<powermock.api.mockito.version>2.0.7</powermock.api.mockito.version>
		<awaitility.version>3.1.0</awaitility.version>
		<jsonsimple.version>1.1.1</jsonsimple.version>
		<commons.codec.version>1.9</commons.codec.version>
		<!-- DFS adapter -->
		<aws.javasdk.version>1.11.368</aws.javasdk.version>
		<s3mock.version>0.2.4</s3mock.version>

		<!-- Vert.x -->
		<vertx.version>3.9.1</vertx.version>
		<camel.vertx.version>2.23.0</camel.vertx.version>
		<hazelcast.kubernetes.version>1.0.0</hazelcast.kubernetes.version>
		<!-- json-simple -->
		<jsonsimple.version>1.1.1</jsonsimple.version>

       <!-- joda-time -->
		<jodatime.version>2.8.1</jodatime.version>

      <!-- jsch.version -->
		<jsch.version>0.1.55</jsch.version>

		<!-- local -->
		<registration.status.service.version>1.2.0.1-SNAPSHOT</registration.status.service.version>
		<registration.processor.core.version>1.2.0.1-SNAPSHOT</registration.processor.core.version>
		<registration.processor.rest.client.version>1.2.0.1-SNAPSHOT</registration.processor.rest.client.version>
	</properties>

    <repositories>
        <repository>
            <id>ossrh</id>
            <name>CentralRepository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <layout>default</layout>
            <snapshots>
            <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central</id>
            <name>MavenCentral</name>
            <layout>default</layout>
            <url>https://repo1.maven.org/maven2</url>
            <snapshots>
            <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>3.4.4</version>
				<scope>test</scope>
			</dependency>
			<!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
			<dependency>
			    <groupId>net.bytebuddy</groupId>
			    <artifactId>byte-buddy</artifactId>
			    <version>1.10.13</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
			    <groupId>org.projectlombok</groupId>
			    <artifactId>lombok</artifactId>
			    <version>1.18.8</version>
			    <scope>provided</scope>
			</dependency>
			<dependency>
			    <groupId>org.powermock</groupId>
			    <artifactId>powermock-core</artifactId>
			    <version>2.0.7</version>
			    <scope>test</scope>
			</dependency>					
			<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.3.1</version>
		</dependency>
		<dependency>
		    <groupId>org.javassist</groupId>
		    <artifactId>javassist</artifactId>
		    <version>3.27.0-GA</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
        <dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
        </dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>registration-processor-external-integration-service</module>
		<module>registration-processor-external-stage</module>
  </modules>
	<build>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
					<configuration>
						<skipTests>${skipTests}</skipTests>
						<skip>false</skip>
						<argLine>
							${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${maven.jacoco.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<phase>prepare-package</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<Project-Name>${project.name}</Project-Name>
								<Project-Version>${project.version}</Project-Version>
								<Built-By>${user.name}</Built-By>
								<Built-OS>${os.name}</Built-OS>
								<Local-Build-Date>${maven.build.timestamp}</Local-Build-Date>
								<Build-Number>${env.BUILD_NUMBER}</Build-Number>
								<Build-Date>${env.BUILD_ID}</Build-Date>
								<Build-URL>${env.BUILD_URL}</Build-URL>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>pl.project13.maven</groupId>
					<artifactId>git-commit-id-plugin</artifactId>
					<version>3.0.1</version>
					<executions>
						<execution>
							<id>get-the-git-infos</id>
							<goals>
								<goal>revision</goal>
							</goals>
							<phase>validate</phase>
						</execution>
					</executions>
					<configuration>
						<generateGitPropertiesFile>true</generateGitPropertiesFile>
						<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
						<includeOnlyProperties>
							<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
							<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
						</includeOnlyProperties>
						<commitIdGenerationMode>full</commitIdGenerationMode>
						<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
						<!-- <format>json</format> -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.5</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
							<configuration>
								<gpgArguments>
									<arg>--pinentry-mode</arg>
									<arg>loopback</arg>
								</gpgArguments>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven.war.plugin.version}</version>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<Project-Name>${project.name}</Project-Name>
								<Project-Version>${project.version}</Project-Version>
								<Built-By>${user.name}</Built-By>
								<Built-OS>${os.name}</Built-OS>
								<Local-Build-Date>${maven.build.timestamp}</Local-Build-Date>
								<Build-Number>${env.BUILD_NUMBER}</Build-Number>
								<Build-Date>${env.BUILD_ID}</Build-Date>
								<Build-URL>${env.BUILD_URL}</Build-URL>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven.javadoc.version}</version>
				<configuration>
					<aggregate>true</aggregate>
					<doclint>none</doclint>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>sonar</id>
			<properties>
				<sonar.sources>.</sonar.sources>
				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
				<sonar.exclusions>${sonar.coverage.exclusions}</sonar.exclusions>
				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
			</properties>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonarsource.scanner.maven</groupId>
						<artifactId>sonar-maven-plugin</artifactId>
						<version>${maven.sonar.plugin.version}</version>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sonar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
